[project]
name = "openenv-support-agent"
version = "0.1.0"
description = "OpenEnv Support Ticket Environment"
authors = [{name = "Your Name"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.openenv]
entrypoint = "environment:SupportTicketEnv"
